--- a/poyasnizagistu/blog/templates/blog/include/pagination.html
+++ b/poyasnizagistu/blog/templates/blog/include/pagination.html
@@ -3,7 +3,9 @@
     <ul>
 {% if page_obj.has_previous %}
 <li class="page-num">
-    <a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
+    <a href="?{% if request.GET.q %}{{q}}page={{ page_obj.previous_page_number }}
+    {%else%}page={{ page_obj.previous_page_number }}
+    {% endif %}">&lt;</a>
 </li>
 {%endif%}
         {% for p in page_obj.paginator.page_range %}
@@ -11,13 +13,16 @@
         <li class="page-num page-num-selected"><p class="pag">{{ p }}</p></li>
         {% elif p >= page_obj.number|add:-3 and p <= page_obj.number|add:3 %}
         <li class="page-num">
-            <a href="?page={{p}}">{{p}}</a>
+            <a href="?{% if request.GET.q %}{{q}}page={{p}}
+            {%else%}page={{p}}{% endif %}">{{p}}</a>
         </li>
         {% endif %}
         {% endfor %}
 {% if page_obj.has_next %}
 <li class="page-num">
-    <a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+    <a href="?{% if request.GET.q %}{{q}}page={{ page_obj.next_page_number }}
+    {%else%}page={{ page_obj.next_page_number }}
+    {% endif %}">&gt;</a>
 </li>
 {%endif%}
     </ul>
