--- a/poyasnizagistu/articles/templates/articles/article.html
+++ b/poyasnizagistu/articles/templates/articles/article.html
@@ -22,7 +22,7 @@
     <h2 class="text-info fs-4 text-center">{{article.title}}</h2>
     <hr class="text-white" style="margin-top:1%; margin-bottom:2%">
 
-    <div class="card" style="background:white;; border-radius: 0.5em;">
+    <div class="card" style="background:rgba(0, 0, 0, 0);; border-radius: 0.5em;">
         {{article.body|safe}}
     </div>
 
