--- a/poyasnizagistu/albums/templates/albums/include/base_albums.html
+++ b/poyasnizagistu/albums/templates/albums/include/base_albums.html
@@ -1,16 +1,35 @@
 {% load albums_tags %}
 {% load static %}
 
-
+{% if request.resolver_match.view_name == 'search_articles' %}
+{% showorgan organ_selected=-1 %}
+{%else%}
 {% showorgan organ_selected=organ_selected %}
+{% endif %}
+
+<form action="{% url 'search_albums' %}" class="form" method="get" style="wight:auto; margin-left:15%; margin-right:15%;">{% csrf_token %}
+    <div class="input-group" >
+        <input id="search" name="q" type="search" class="form-control"  required="" placeholder="Название альбома" style="border-radius:0.4em;">
+        <span class="input-group-btn">
+            <button type="submit" class="btn btn-danger">Найти Статью</button>
+        </span>
+    </div>
+</form>
 
 <div class="profile-2">
+     {%if not albums %}
+        <h2 class="reg-h" style="margin-top:10%;">По Вашему запросу ничего не найдено</h2>
+    {%endif%}
+    {% if request.resolver_match.view_name == 'search_albums' and albums %}
+    <h2 class="reg-h text-danger" style="margin-top:2%; margin-bottom:0px;">Результаты поиска:</h2>
+    {% endif %}
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2  g-1">
         {% for album in albums %}
         <div class="col">
             <div class="profile-cust card h-100">
                 <div class="card-body">
-                    <p class="text-center text-danger time" style="margin-top:0px;">Системы органов: {{album.organ_system}}</p>
+                     <span class="right" style="float:right;"><p class="text-danger time">Системы органов: {{album.organ_system}}</p></span><span class="left" style="float:left;"><p class="text-muted time">{{album.time_create|date}}</p></span>
+                    <br>
                     <hr class="text-white" style="margin-top:0%; margin-bottom:1%">
                     <h2 class="text-info fs-5 text-center">{{ album.title|truncatechars:51 }}</h2>
                     <hr class="text-white" style="margin-top:1%; margin-bottom:2%">
@@ -19,7 +38,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-
+                    <hr class="text-white" style="margin-top:0px; margin-bottom:1%">
                     <span class="right" style="float:right;">
                          <ul class="lines">
                              <li class="lines"><image class="btn-like" src="{% static 'blog/images/comment.png' %}" style="margin-top:0.2em; margin-right:5px;" width="19em" height="19em"></image>
@@ -55,16 +74,18 @@
         {% endfor %}
     </div>
     <script>
-    (function () {
-        window.onpageshow = function(event) {
-            if (event.persisted) {
-                window.location.reload();
-            }
-        };
-    })();
+if (document.addEventListener) {
+    window.addEventListener('pageshow', function (event) {
+        if (event.persisted || performance.getEntriesByType("navigation")[0].type === 'back_forward') {
+            location.reload();
+        }
+    },
+    false);
+}
     </script>
 
-{% include "blog/include/pagination.html" %}
+
+{% include "albums/include/pagination.html" %}
 
 </div>
 
