--- a/poyasnizagistu/articles/templates/articles/include/base_articles.html
+++ b/poyasnizagistu/articles/templates/articles/include/base_articles.html
@@ -1,10 +1,28 @@
 {% load articles_tags %}
 {% load static %}
 
-
+{% if request.resolver_match.view_name == 'search_articles' %}
+{% showthematics thematic_selected=-1%}
+{%else%}
 {% showthematics thematic_selected=thematic_selected%}
+{% endif %}
+
+<form action="{% url 'search_articles' %}" class="form" method="get" style="wight:auto; margin-left:15%; margin-right:15%;">{% csrf_token %}
+    <div class="input-group" >
+        <input id="search" name="q" type="search" class="form-control"  required="" placeholder="Название статьи" style="border-radius:0.4em;">
+        <span class="input-group-btn">
+            <button type="submit" class="btn btn-danger">Найти Статью</button>
+        </span>
+    </div>
+</form>
 
 <div class="profile-2">
+    {%if not articles %}
+        <h2 class="reg-h" style="margin-top:10%;">По Вашему запросу ничего не найдено</h2>
+    {%endif%}
+    {% if request.resolver_match.view_name == 'search_articles' and articles %}
+    <h2 class="reg-h text-danger" style="margin-top:2%; margin-bottom:0px;">Результаты поиска:</h2>
+    {% endif %}
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2  g-1">
         {% for article in articles %}
         <div class="col">
@@ -52,13 +70,14 @@
         {% endfor %}
     </div>
     <script>
-    (function () {
-        window.onpageshow = function(event) {
-            if (event.persisted) {
-                window.location.reload();
-            }
-        };
-    })();
+if (document.addEventListener) {
+    window.addEventListener('pageshow', function (event) {
+        if (event.persisted || performance.getEntriesByType("navigation")[0].type === 'back_forward') {
+            location.reload();
+        }
+    },
+    false);
+}
     </script>
 
 {% include "articles/include/pagination.html" %}
