--- a/poyasnizagistu/blog/templates/blog/include/base_blog.html
+++ b/poyasnizagistu/blog/templates/blog/include/base_blog.html
@@ -82,13 +82,14 @@
         {% endfor %}
     </div>
     <script>
-    (function () {
-        window.onpageshow = function(event) {
-            if (event.persisted) {
-                window.location.reload();
-            }
-        };
-    })();
+if (document.addEventListener) {
+    window.addEventListener('pageshow', function (event) {
+        if (event.persisted || performance.getEntriesByType("navigation")[0].type === 'back_forward') {
+            location.reload();
+        }
+    },
+    false);
+}
     </script>
 
 {% include "blog/include/pagination.html" %}
