--- a/poyasnizagistu/blog/templates/blog/include/base.html
+++ b/poyasnizagistu/blog/templates/blog/include/base.html
@@ -23,6 +23,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
     <link rel="stylesheet" href='{% static "blog/css/styles.css" %}'>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'blog/favicon/apple-touch-icon.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'blog/favicon/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'blog/favicon/favicon-16x16.png'%}">
+    <link rel="manifest" href="{% static 'blog/favicon/site.webmanifest'%}">
+
 <body style="background-image: url('{% static 'blog/images/back.jpeg' %}'); ">
 <!--   ВВЕРХНЯЯ ПАНЕЛЬ МЕНЮ -->
 {% block navbar %}
@@ -54,6 +59,7 @@
 {% endfor %}
 		        </ul>
             </div>
+
         </div>
 	</nav>
 {% endblock navbar %}
