--- a/poyasnizagistu/users/templates/registration/password_change_done.html
+++ b/poyasnizagistu/users/templates/registration/password_change_done.html
@@ -6,6 +6,6 @@
 
 {% block content %}
 
-<h5 class="reg-h text-warning">Ваш пароль был успешно изменён!</h5>
+<h5 class="gold-title">Ваш пароль был успешно изменён!</h5>
 
 {% endblock %}
