--- a/poyasnizagistu/users/templates/registration/password_reset_confirm.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_confirm.html
@@ -6,7 +6,7 @@
 
 <div class="container-log text-center"> 
     {% if validlink %}
-    <h5 class="reg-h">Пожалуйста введите Ваш новый пароль.</h5> 
+    <h5 class="gold-title">Пожалуйста введите Ваш новый пароль.</h5>
 
         <form action="" method="post">
             {% csrf_token %}
