--- a/poyasnizagistu/users/templates/registration/password_reset_done.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_done.html
@@ -3,5 +3,5 @@
     <title>Восстановление пароля</title>
 {% endblock %}
 {% block content %}
-<h5 class="reg-h">Мы отправили Вам на электронную почту инструкцию, как Вам поменять свой пароль. Если письмо не приходит более чем через 5 минут, то проверьте спам на почте и убедитесь, что вы ввели правильно свою электронную почту</h5>
+<h5 class="gold-title">Мы отправили Вам на электронную почту инструкцию, как Вам поменять свой пароль. Если письмо не приходит более чем через 5 минут, то проверьте спам на почте и убедитесь, что вы ввели правильно свою электронную почту</h5>
 {% endblock %}
