--- a/poyasnizagistu/users/templates/registration/password_reset_complete.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_complete.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<h5 class="reg-h text-warning">Ваш пароль был успешно изменён!</h5>
+<h5 class="gold-title">Ваш пароль был успешно изменён!</h5>
 
 
 
