--- a/poyasnizagistu/users/templates/registration/password_reset_form.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_form.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <form action="" method="post">{% csrf_token %}
-    <h5 class="reg-h">Уважаемый пользователь, введите Вашу почту, чтобы мы отправили Вам письмо для смены пароля</h5>
+    <h5 class="gold-title">Уважаемый пользователь, введите Вашу почту, чтобы мы отправили Вам письмо для смены пароля</h5>
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
     <p class="email-reset">Введите свою почту: {{ form.email }}</p>
     <p class="form-log"><button type="submit" value="Reset password" class="btn btn-outline-info btn-log">Сменить пароль</button></p>
