--- a/poyasnizagistu/blog/templates/blog/include/base.html
+++ b/poyasnizagistu/blog/templates/blog/include/base.html
@@ -72,9 +72,9 @@
         </div>
         <div class="footer">
             <div class="cont-right">Правообладатель контента: Оганян Э. Е.
-                <a class="text-mail">hayk4500@gmail.com </a>
+                <a class="text-mail">hayk4500@mail.ru </a>
             </div>
-            <div class="site-right">Правообладатель сайта: Ковальский Н. О.
+            <div class="site-right">Разработчик сайта: Ковальский Н. О.
                 <a class="text-mail">kovalskiy_work@mail.ru</a>
             </div>
         </div>
