--- a/poyasnizagistu/users/templates/users/profile.html
+++ b/poyasnizagistu/users/templates/users/profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="profile">
   <div class="avatar-container">
-    <img class="avatar"  src='{{user.avatar.url}}' alt="{user.username}}" width="200em" height="195em">
+    <img class="avatar"  src='{{user.avatar.url}}' alt="{{user.username}}" width="200em" height="195em">
   </div>
   <dl class="row row-cols-1 row-cols-md-1 row-cols-lg-1">
     <dt class="col text-center text-danger">Имя пользователя:</dt>
